# resume-parser-crewai-sandbox

./: README.md  main.py  pyproject.toml  requirements.txt
app/: agents.py  crew.py  tasks.py
app/utils/: file_loader.py  logger.py  utils.py
experiments/: groq_crewai.py
